fix(calendar): missing nav spacing
https://github.com/telerik/kendo-themes/issues/1997

--- a/packages/default/scss/calendar/_layout.scss
+++ b/packages/default/scss/calendar/_layout.scss
@@ -125,6 +125,10 @@
                 flex-direction: row;
                 align-items: center;
                 flex-wrap: nowrap;
+
+                .k-today {
+                    margin: $calendar-today-nav-margin-y $calendar-today-nav-margin-x;
+                }
             }
 
             .k-button { @extend .k-button-flat; }
