--- a/packages/default/scss/calendar/_variables.scss
+++ b/packages/default/scss/calendar/_variables.scss
@@ -63,6 +63,8 @@ $calendar-navigation-bg: $calendar-header-bg !default;
 $calendar-navigation-text: $calendar-header-text !default;
 $calendar-navigation-border: $calendar-header-border !default;
 
+$calendar-today-nav-margin-x: 8px !default;
+$calendar-today-nav-margin-y: 0 !default;
 $calendar-today-nav-text: $link-text !default;
 $calendar-today-nav-hovered-text: $link-hover-text !default;
 
